fixed css for phonegap

--- a/css/app.css
+++ b/css/app.css
@@ -28,6 +28,13 @@ body {
     overflow: hidden;
 }
 
+#status {
+    height: 2.8em;
+}
+
+#grid {
+    height: 7.6em;
+}
 
 /* clock control: */
 #clock {
